--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">Reminder App</string>
+    <string name="app_name">Job Tracker</string>
     <string name="reminder_app">HustleX</string>
+    <string name="edit_job">Edit Job</string>
+    <string name="delete_job">Delete Job</string>
+    <string name="add_job">Add Job</string>
+    <color name="red">#FF0000</color>
 </resources>
